log
Mon 01 May 2023 12:44:31 AM UTC: 
 tests:  0|5
total_score: 0/70
6582fa7
Mon 01 May 2023 12:51:37 AM UTC: 
 sudoku.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:18: error: ‘Node’ has no member named ‘state’
   58 |             if (n->state[row][col] == 0) { // Si la casilla está vacía, agregamos nuevos nodos
      |                  ^~
sudoku.c:61:29: error: ‘Node’ has no member named ‘state’
   61 |                     adj_node->state[row][col] = val; // Agregamos un valor posible a la casilla vacía
      |                             ^~
sudoku.c:62:21: error: implicit declaration of function ‘addLast’ [-Werror=implicit-function-declaration]
   62 |                     addLast(adj_nodes, adj_node); // Agregamos el nodo adyacente a la lista
      |                     ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6993cef
Mon 01 May 2023 01:25:25 AM UTC: 
 sudoku.c | 25 ++++++++++++-------------
 1 file changed, 12 insertions(+), 13 deletions(-)
 tests:  2|4
total_score: 15/70
2eaaad7
Mon 01 May 2023 01:44:09 AM UTC: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d31d5e4
Mon 01 May 2023 01:45:10 AM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|4
total_score: 15/70
31d2b21
Mon 01 May 2023 01:45:33 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d8f2c6e
Mon 01 May 2023 01:49:39 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
960ac93
Mon 01 May 2023 02:01:52 AM UTC: 
 sudoku.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:7: error: unused variable ‘valido’ [-Werror=unused-variable]
   47 |   int valido[10], i, j;
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
812ab67
Mon 01 May 2023 02:22:41 AM UTC: 
 sudoku.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:36: error: ‘k’ undeclared (first use in this function)
   54 |             if(is_valid(n->sudo[i][k]) == valido[z])
      |                                    ^
sudoku.c:54:36: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:47:22: error: unused variable ‘p’ [-Werror=unused-variable]
   47 |   int *valido, i, j, p;
      |                      ^
sudoku.c: At top level:
sudoku.c:73:3: error: expected identifier or ‘(’ before ‘return’
   73 |   return 1;
      |   ^~~~~~
sudoku.c:74:1: error: expected identifier or ‘(’ before ‘}’ token
   74 | }
      | ^
sudoku.c: In function ‘is_valid’:
sudoku.c:72:3: error: control reaches end of non-void function [-Werror=return-type]
   72 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
47a46bb
Mon 01 May 2023 02:22:50 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:36: error: ‘k’ undeclared (first use in this function)
   54 |             if(is_valid(n->sudo[i][k]) == valido[z])
      |                                    ^
sudoku.c:54:36: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:47:22: error: unused variable ‘z’ [-Werror=unused-variable]
   47 |   int *valido, i, j, z;
      |                      ^
sudoku.c: At top level:
sudoku.c:73:3: error: expected identifier or ‘(’ before ‘return’
   73 |   return 1;
      |   ^~~~~~
sudoku.c:74:1: error: expected identifier or ‘(’ before ‘}’ token
   74 | }
      | ^
sudoku.c: In function ‘is_valid’:
sudoku.c:72:3: error: control reaches end of non-void function [-Werror=return-type]
   72 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
7f49f65
